Minor fixes to the build, add patches/series
Change-Id: Icd467e20e16d3768e1c013a177e5eab1212d1dc4

--- a/debian/rules
+++ b/debian/rules
@@ -6,12 +6,13 @@
 include /usr/share/dpkg/pkg-info.mk
 
 # OS / ARCH.
-OS := Linux
+OS := linux
 ARCH := amd64
 
 DH_GOPKG := github.com/projectcalico/calicoctl
 export GOPATH=$(CURDIR)/build
 export BUILD_DIR=$(GOPATH)/src/github.com/projectcalico/calicoctl
+LIBCALICOGO_VER := "v$(DEB_VERSION_UPSTREAM)"
 
 %:
 	dh $@ --buildsystem=golang
@@ -23,9 +24,7 @@ override_dh_auto_configure:
 	cd $(BUILD_DIR) && glide install -strip-vendor
 
 override_dh_auto_build:
-	PACKAGE_NAME?=github.com/projectcalico/calicoctl
-	cd $(BUILD_DIR) && GOOS=$(OS) GOARCH=$(ARCH) CGO_ENABLED=0 go build -v -i -o dist/calicoctl -ldflags "-X $(PACKAGE_NAME)/calicoctl/commands.VERSION=$(DEB_VERSION_UPSTREAM) -s -w" "./calicoctl/calicoctl.go"
-
+	cd $(BUILD_DIR) && GOOS=$(OS) GOARCH=$(ARCH) CGO_ENABLED=0 go build -v -i -o dist/calicoctl -ldflags "-X $(DH_GOPKG)/calicoctl/commands.VERSION=$(DEB_VERSION_UPSTREAM) -s -w" "./calicoctl/calicoctl.go"
 
 override_dh_auto_test:
 	echo "Skipping tests"
